syntax = "proto3";

package admin;

service SubroutineManager {
	rpc ListSubroutines(Empty) returns (SubroutineList) {}
}

message Empty {}

message Subroutine {
	string name = 1;
	int32 pid = 2;
}

message SubroutineList {
	repeated Subroutine subroutines = 1;
}
